<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="cache">Cache</string>
    <string name="detail">Details</string>
    <string name="search">Search</string>
    <string name="helpers">Useful apps</string>
    <string name="about">About c:geo</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="settings_titlebar">c:geo Settings</string>
    <string name="all_types">All Cache Types</string>
    <string name="traditional">Traditional Cache</string>
    <string name="multi">Multi-cache</string>
    <string name="mystery">Mystery Cache</string>
    <string name="letterbox">Letterbox Hybrid</string>
    <string name="event">Event Cache</string>
    <string name="mega">Mega-Event Cache</string>
    <string name="giga">Giga-Event Cache</string>
    <string name="earth">Earthcache</string>
    <string name="cito">Cache In Trash Out Event</string>
    <string name="webcam">Webcam Cache</string>
    <string name="virtual">Virtual Cache</string>
    <string name="wherigo">Wherigo Cache</string>
    <string name="communceleb">Community Celebration Event</string>
    <string name="ape">Project APE Cache</string>
    <string name="gchq">Geocaching HQ</string>
    <string name="gchqceleb">Geocaching HQ Celebration</string>
    <string name="gps">GPS Adventures Exhibit</string>
    <string name="block">Geocaching HQ Block Party</string>
    <string name="locationless">Locationless (Reverse) Cache</string>
    <string name="userdefined">User defined cache</string>
    <string name="unknown">Unknown Type</string>
    <string name="cache_size_micro">Micro</string>
    <string name="cache_size_small">Small</string>
    <string name="cache_size_regular">Regular</string>
    <string name="cache_size_large">Large</string>
    <string name="cache_size_other">Other</string>
    <string name="cache_size_virtual">Virtual</string>
    <string name="cache_size_notchosen">Not chosen</string>
    <string name="cache_size_unknown">Unknown</string>
    <string name="cache_size_nano">Nano</string>
    <string name="cache_size_very_large">Very large</string>
    <string name="wp_final">Final Location</string>
    <string name="wp_stage">Stage of a Multicache</string>
    <string name="wp_puzzle">Question to Answer</string>
    <string name="wp_pkg">Parking Area</string>
    <string name="wp_trailhead">Trailhead</string>
    <string name="wp_waypoint">Reference Point</string>
    <string name="wp_original">Original Coordinates</string>
    <string name="wpnew_final">Final</string>
    <string name="wpnew_stage">Stage</string>
    <string name="wpnew_pkg">Parking</string>
    <string name="wpnew_trailhead">Via</string>
    <string name="wpnew_waypoint">Marker</string>
    <string name="wpnew_original">Original</string>
    <string name="log_found">Found it</string>
    <string name="log_dnf">Didn\'t find it</string>
    <string name="log_note">Write note</string>
    <string name="log_published">Published</string>
    <string name="log_enabled">Enabled</string>
    <string name="log_disabled">Disabled</string>
    <string name="log_attend">Will Attend</string>
    <string name="log_attended">Attended</string>
    <string name="log_retrieved">Retrieved</string>
    <string name="log_placed">Placed</string>
    <string name="log_grabbed">Grabbed Somewhere</string>
    <string name="log_movecollection">Move to Collection</string>
    <string name="log_moveinventory">Move to Inventory</string>
    <string name="log_maintained">Maintenance Performed</string>
    <string name="log_maintenance_needed">Needs Maintenance</string>
    <string name="log_update">Updated Coordinates</string>
    <string name="log_archived">Archived</string>
    <string name="log_unarchived">Unarchived</string>
    <string name="log_needs_archived">Needs Archived</string>
    <string name="log_discovered">Discovered</string>
    <string name="log_reviewer">Review Note</string>
    <string name="log_submit_for_review">Submit for Review</string>
    <string name="log_retractlisting">Retract Listing</string>
    <string name="log_marked_missing">Marked Missing</string>
    <string name="log_tb_nothing">Do Nothing</string>
    <string name="log_tb_visit">Visited</string>
    <string name="log_tb_drop">Dropped Off</string>
    <string name="log_tb_sortby">Sort Trackable</string>
    <string name="log_tb_changeall">Change All</string>
    <string name="log_tb_grabbed">Grabbed Somewhere</string>
    <string name="log_tb_note">Note</string>
    <string name="log_tb_discovered">Discovered</string>
    <string name="log_tb_archived">Archived</string>
    <string name="log_save">Save offline</string>
    <string name="log_saving">Sending log…</string>
    <string name="log_saving_and_uploading">Posting log and uploading images…</string>
    <string name="log_posting_log">Posting log…</string>
    <string name="log_posting_twitter">Posting tweet…</string>
    <string name="log_posting_vote">Posting cache vote…</string>
    <string name="log_posting_image">Posting images…</string>
    <string name="log_posting_generic_trackable">Posting %1$s %2$d/%3$d</string>
    <string name="log_clear">Clear</string>
    <string name="log_post_not_possible">Download of data in progress…\nPlease try again in a few seconds or check your internet connection.</string>
    <string name="log_date_future_not_allowed">Future log dates are not allowed.</string>
    <string name="log_add">Add</string>
    <string name="log_repeat">Repeat last log</string>
    <string name="log_no_rating">No rating</string>
    <string name="log_stars_1_description">Poor</string>
    <string name="log_stars_15_description">Fairly poor</string>
    <string name="log_stars_2_description">Below average</string>
    <string name="log_stars_25_description">Not so bad</string>
    <string name="log_stars_3_description">Average</string>
    <string name="log_stars_35_description">Not bad at all</string>
    <string name="log_stars_4_description">Better than average</string>
    <string name="log_stars_45_description">Very good</string>
    <string name="log_stars_5_description">Awesome</string>
    <string name="log_webcam">Webcam Photo Taken</string>
    <string name="log_new_log">Log</string>
    <string name="caches_nearby_button">Nearby</string>
    <string name="advanced_search_button">Search</string>
    <string name="stored_caches_button">Stored</string>
    <string name="caches_on_map">Show on map</string>
    <string name="caches_sort">Sort</string>
    <string name="caches_select_mode">Select mode</string>
    <string name="caches_select_invert">Invert selection</string>
    <string name="caches_delete_events">Delete past events</string>
    <string name="caches_filter">Filter</string>
    <string name="caches_clear_offlinelogs">Clear offline logs</string>
    <string name="list_menu_create">Create new list</string>
    <string name="list_menu_drop">Remove current list</string>
    <string name="list_menu_rename">Rename current list</string>
    <string name="settings_title_services">Services</string>
    <string name="settings_summary_services">Configure user account information and access to optional services.</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_summary_appearance">Configure distance units, language and app colors.</string>
    <string name="settings_title_cachedetails">Cache Details</string>
    <string name="settings_summary_cachedetails">Customize the display of cache information.</string>
    <string name="settings_title_offlinedata">Offline Data</string>
    <string name="settings_summary_offlinedata">Configure the data to be saved for offline use, the storage location and folders for GPX files.</string>
    <string name="settings_title_logging">Logging</string>
    <string name="settings_summary_logging">Configure your signature and set logging options.</string>
    <string name="settings_title_map">Map</string>
    <string name="settings_summary_map">Set map source, offline map settings and map details.</string>
    <string name="settings_title_navigation">Navigation</string>
    <string name="settings_summary_navigation">Choose preferred navigation methods and select external navigation apps.</string>
    <string name="settings_title_system">System</string>
    <string name="settings_summary_system">System specific settings and debugging options.</string>
    <string name="settings_title_backup">Backup / Restore</string>
    <string name="settings_summary_backup">Perform backup and restore of cache/waypoint data and program settings.</string>
    <string name="cache_offline_refresh">Refresh</string>
    <string name="cache_offline_drop">Remove</string>
    <string name="cache_offline_store">Store</string>
    <string name="cache_waypoints_add">Add Waypoint</string>
    <string name="cache_waypoints_add_currentLocation">Add current location</string>
    <string name="cache_waypoints_add_fromclipboard">Add from clipboard</string>
    <string name="cache_hint">Hint</string>
    <string name="cache_menu_navigate">Navigate</string>
    <string name="cache_menu_visit">Log Visit</string>
    <string name="cache_menu_visit_offline">Quick offline log</string>
    <string name="cache_menu_around">Caches around</string>
    <string name="cache_menu_details">Details</string>
    <string name="cache_menu_refresh">Refresh</string>
    <string name="cache_menu_move_list">Move to different list</string>
    <string name="cache_menu_copy_list">Copy to different list</string>
    <string name="cache_clear_history">Clear history</string>
    <string name="gpx_import_title">Import GPX</string>
    <string name="web_import_title">Import from send2cgeo</string>
    <string name="waypoint_cache_coordinates">Cache coordinates</string>
    <string name="waypoint_my_coordinates">My coordinates</string>
    <string name="waypoint_edit">Edit</string>
    <string name="waypoint_copy_coordinates">Copy coordinates</string>
    <string name="waypoint_clear_coordinates">Clear coordinates</string>
    <string name="waypoint_delete">Delete</string>
    <string name="waypoint_visited">Visited</string>
    <string name="waypoint_reset_cache_coords">Reset cache coordinates</string>
    <string name="waypoint_done">Done</string>
    <string name="waypoint_duplicate">Duplicate waypoint</string>
    <string name="waypoint_toclipboard">Copy waypoint to clipboard</string>
    <string name="from_clipboard">From clipboard</string>
    <string name="map_map">Map</string>
    <string name="trackable_log_touch">Log touch</string>
    <string name="trackable_browser_open">Open in Browser</string>
    <string name="trackable_refresh">Refresh</string>
    <string name="destination_select">Select destination</string>
    <string name="export">Export</string>
    <string name="export_fieldnotes_info">Field Notes will be exported to /sdcard/field-notes with the current date and time as their file name.</string>
    <string name="export_fieldnotes_upload">Upload to geocaching.com</string>
    <string name="export_fieldnotes_onlynew">Only since last export</string>
    <string name="tts_toggle">Toggle talking</string>
    <string name="wizard_advanced_offlinemaps_label">Offline maps</string>
    <string name="wizard_advanced_offlinemaps_info">This page provides some advanced functions, which are optional to use.\n\nc:geo can download map files for offline usage.</string>
    <string name="wizard_advanced_brouter_label">Routing app</string>
    <string name="wizard_advanced_brouter_info">By installing and configuring a companion app named \"BRouter Offline Navigation\" c:geo can navigate to targets and show routing infos on your map.</string>
    <string name="wizard_advanced_restore_label">Restore</string>
    <string name="wizard_advanced_restore_info">If you have a backup of a previous installation you can restore settings and/or geocache data.</string>
</resources>