<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_menu_filter"
        android:title="@string/caches_filter">
    </item>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_menu_sort_alphabetically"
        android:title="@string/caches_sort">
    </item>
    <item
        android:id="@+id/menu_switch_select_mode"
        android:icon="@drawable/ic_menu_agenda"
        android:title="@string/caches_select_mode">
    </item>
    <item
        android:id="@+id/menu_invert_selection"
        android:icon="@drawable/ic_menu_mark"
        android:title="@string/caches_select_invert">
    </item>
    <item
        android:id="@+id/submenu_manage"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/caches_manage">
        <menu>
            <item
                android:id="@+id/menu_refresh_stored"
                android:title="@string/cache_offline_refresh">
            </item>
            <item
                android:id="@+id/menu_move_to_list"
                android:title="@string/cache_menu_move_list">
            </item>
            <item
                android:id="@+id/menu_drop_caches"
                android:title="@string/caches_drop_all">
            </item>
            <item
                android:id="@+id/menu_drop_caches_and_list"
                android:title="@string/caches_drop_all_and_list">
            </item>
            <item
                android:id="@+id/menu_delete_events"
                android:title="@string/caches_delete_events">
            </item>
            <item
                android:id="@+id/menu_clear_offline_logs"
                android:title="@string/caches_clear_offlinelogs">
            </item>
            <item
                android:id="@+id/menu_import_gpx"
                android:title="@string/gpx_import_title">
            </item>
            <item
                android:id="@+id/menu_import_web"
                android:title="@string/web_import_title">
            </item>
            <item
                android:id="@+id/menu_import_android"
                android:title="@string/gpx_import_android">
            </item>
            <item
                android:id="@+id/menu_export"
                android:title="@string/export">
            </item>
            <item
                android:id="@+id/menu_remove_from_history"
                android:title="@string/cache_clear_history">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_refresh_stored_top"
        android:icon="@drawable/ic_menu_set_as"
        android:title="@string/cache_offline_refresh">
    </item>
    <item
        android:id="@+id/menu_cache_list_app"
        android:icon="@drawable/ic_menu_mapmode"
        android:title="@null"
        android:visible="false">
    </item>
    <item
        android:id="@+id/submenu_cache_list_app"
        android:icon="@drawable/ic_menu_mapmode"
        android:title="@string/caches_on_map"
        android:visible="false">
        <menu >
        </menu>
    </item>
    <item
        android:id="@+id/submenu_manage_lists"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/list_menu">
        <menu>
            <item
                android:id="@+id/menu_create_list"
                android:title="@string/list_menu_create">
            </item>
            <item
                android:id="@+id/menu_drop_list"
                android:title="@string/list_menu_drop">
            </item>
            <item
                android:id="@+id/menu_rename_list"
                android:title="@string/list_menu_rename">
            </item>
            <item
                android:id="@+id/menu_switch_list"
                android:title="@string/list_menu_change">
            </item>
        </menu>
    </item>

</menu>