<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_hint"
        android:icon="@drawable/ic_menu_hint"
        android:title="@string/cache_hint"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_menu_mapmode"
        android:title="@string/caches_on_map"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_tts_toggle"
        android:icon="@drawable/ic_menu_start_conversation"
        android:title="@string/tts_toggle"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_select_destination"
        android:icon="@drawable/ic_menu_myplaces"
        android:orderInCategory="999"
        android:title="@string/destination_select"
        android:visible="false"
        app:actionProviderClass="cgeo.geocaching.ui.WaypointSelectionActionProvider"
        app:showAsAction="ifRoom|withText">
    </item>

</menu>
