<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wizard_title"
        android:layout_marginTop="32dp"
        style="@style/InstallationWizardTextViewBase"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/wizard_offlinemaps_info"
        android:layout_below="@id/wizard_title"
        style="@style/InstallationWizardTextViewAdvanced"
        android:text="@string/wizard_advanced_offlinemaps_info" />
    <Button
        android:id="@+id/wizard_offlinemaps"
        android:layout_below="@id/wizard_offlinemaps_info"
        style="@style/InstallationWizardButtonFull"
        android:text="@string/wizard_advanced_offlinemaps_label" />

    <TextView
        android:id="@+id/wizard_brouter_info"
        android:layout_below="@id/wizard_offlinemaps"
        style="@style/InstallationWizardTextViewAdvanced"
        android:text="@string/wizard_advanced_brouter_info" />
    <Button
        android:id="@+id/wizard_brouter"
        android:layout_below="@id/wizard_brouter_info"
        style="@style/InstallationWizardButtonFull"
        android:text="@string/wizard_advanced_brouter_label" />

    <TextView
        android:id="@+id/wizard_services_info"
        android:layout_below="@id/wizard_brouter"
        style="@style/InstallationWizardTextViewAdvanced"
        android:text="@string/wizard_advanced_services_info" />
    <Button
        android:id="@+id/wizard_services"
        android:layout_below="@id/wizard_services_info"
        style="@style/InstallationWizardButtonFull"
        android:text="@string/wizard_advanced_services_label" />

    <TextView
        android:id="@+id/wizard_restore_info"
        android:layout_below="@id/wizard_services"
        style="@style/InstallationWizardTextViewAdvanced"
        android:text="@string/wizard_advanced_restore_info" />
    <Button
        android:id="@+id/wizard_restore"
        android:layout_below="@id/wizard_restore_info"
        style="@style/InstallationWizardButtonFull"
        android:text="@string/wizard_advanced_restore_label" />

    <include layout="@layout/install_wizard_footer" />

</RelativeLayout>
