<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dip"
    tools:context=".export.FieldNoteExport" >

    <TextView
        android:id="@id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_fieldnotes_info" />

    <CheckBox
        android:id="@+id/upload"
        style="@style/checkbox_full"
        android:text="@string/export_fieldnotes_upload" />

    <CheckBox
        android:id="@+id/onlynew"
        style="@style/checkbox_full"
        android:text="@string/export_fieldnotes_onlynew" />

</LinearLayout>
