<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_log_touch"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/trackable_log_touch"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_browser_trackable"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/trackable_browser_open"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_refresh_trackable"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/trackable_refresh"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
    </item>

</menu>
