<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".ui.dialog.CoordinatesInputDialog">

    <LinearLayout
        android:id="@+id/scroller_child"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include android:id="@+id/actionbar" layout="@layout/actionbar_popup" />
        <include android:id="@+id/input" layout="@layout/coordinates_input" />

        <Button
            android:id="@+id/current"
            style="@style/button_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_my_coordinates" />

        <Button
            android:id="@+id/cache"
            style="@style/button_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_cache_coordinates" />

        <Button
            android:id="@+id/calculate_global"
            style="@style/button_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_calculated_coordinates_global"
            app:icon="@drawable/ic_menu_variable"
            android:visibility="gone" />

        <Button
            android:id="@+id/clipboard"
            style="@style/button_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_clipboard"
            android:visibility="gone" />

        <Button
            android:id="@+id/clear"
            style="@style/button_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_clear_coordinates"
            android:visibility="gone" />

        <Button
            android:id="@+id/done"
            style="@style/button_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/waypoint_done" />
    </LinearLayout>

</ScrollView>
